--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,4 +3,6 @@ Menu (<a href="{{ site.github.repository_url }}/edit/{{site.git_branch | escape}
 <ul>
   <li><a href="{{ '/' | relative_url }}">Home</a></li>
   <li><a href="{{ '/games' | relative_url }}">Games</a>
+  <hr>
+  <li><a href="{{ '/formatting_instructions' | relative_url }}">Contributing instructions</a>
 </ul>
