--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<a href="https://www.possiblyaxolotl.com">Main site</a>&nbsp;&nbsp;&nbsp;<a href="https://www.possiblyaxolotl.com">Social links</a><hr>
+<a href="https://www.possiblyaxolotl.com">Main site</a>&nbsp;&nbsp;&nbsp;<a href="https://www.possiblyaxolotl.com/contact">Social links</a><hr>
