--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<a href="https://www.possiblyaxolotl.com">Main site</a>&nbsp;&nbsp;&nbsp;<a href="https://www.possiblyaxolotl.com/contact">Social links</a><hr>
+<a href="https://www.possiblyaxolotl.com">Main site</a>&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/@PossiblyAxolotl">YouTube</a>&nbsp;&nbsp;&nbsp;<a href="https://possiblyaxolotl.itch.io">Itch.io</a>&nbsp;&nbsp;&nbsp;<a href="https://www.possiblyaxolotl.com/contact">Social links</a><hr>
