--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,6 +4,8 @@ Menu (<a href="{{ site.github.repository_url }}/edit/{{site.git_branch | escape}
   <li><a href="{{ '/' | relative_url }}">Home</a></li>
   <li><a href="{{ '/youtube' | relative_url }}">About</a>
   <li><a href="{{ '/games' | relative_url }}">Games</a>
+  <li><a href="{{ '/videos' | relative_url }}">Videos</a>
+  <li><a href="{{ '/other' | relative_url }}">Other</a>
   <hr>
   <li><a href="{{ '/formatting_instructions' | relative_url }}">Contributing instructions</a>
   <li><a href="https://www.possiblyaxolotl.com">Main site</a></li>
