--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,4 +6,5 @@ Menu (<a href="{{ site.github.repository_url }}/edit/{{site.git_branch | escape}
   <hr>
   <li><a href="{{ '/formatting_instructions' | relative_url }}">Contributing instructions</a>
   <li><a href="https://www.possiblyaxolotl.com">Main site</a></li>
+  <li><a href="{{ '/possiblyaxolotl_com' | relative_url }}">Other sites</a>
 </ul>
